# GodLang

./: .gitignore  CMakeLists.txt  Design.md  Interpreter.cpp  Interpreter.h  InterpreterMain  InterpreterMain.cpp  Lexer.cpp  Lexer.h  Makefile  Node.h  Parser.cpp  Parser.h
docs/: ASTDEF.txt  bytecodedef.txt  complier.txt
docs/UML/: astobjs.puml
programms/: helloworld.byte  precedenc.sile  test.byte  test2.byte  tokentest.sile
src/: CMakeLists.txt  CMakeLists.txtold  main.cpp
src/lexer/: CMakeLists.txt  CMakeLists.txtold  lexer.cpp  lexer.h
src/parser/: CMakeLists.txt  node.h  parser.cpp  parser.h
src/runtime/: CMakeLists.txt  interpreter.cpp  interpreter.h  irmruntime.cpp  irmruntime.h
